--- a/creditors_payment/templates/creditors_payment/payment_detail.html
+++ b/creditors_payment/templates/creditors_payment/payment_detail.html
@@ -1,9 +1,16 @@
 {% extends "client/layout.html" %}
 {% block body %}
-<ul>
-    <h3 class="profile-username text-center" align="center"> Creditors Payment Details </h3>
+
+    <h3 class="profile-username text-center"> Creditors Payment Details </h3>
+<hr/>
+
+        <div class="col-md-6">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
                 <ul class="list-group list-group-unbordered mb-3">
-                <div>
+
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -28,6 +35,22 @@
                     <b> Branch Name: </b> <a class="float-right">{{ object.branch_name }}</a>
                     </li>
 
+                </ul>
+
+              </div>
+
+            </div>
+
+    </div>
+
+    <div class="col-md-6" align="left">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3">
+
+
                     <li class="list-group-item">
                     <b> Cheque Number: </b> <a class="float-right">{{ object.cheque_no }}</a>
                     </li>
@@ -44,7 +67,12 @@
                     <b> Slip Number: </b> <a class="float-right">{{ object.slip_no }}</a>
                     </li>
 
-                </div>
                 </ul>
-</ul>
+
+              </div>
+
+            </div>
+
+    </div>
+
 {% endblock %}
