--- a/employee_payment/templates/employee_payment/employee_p_detail.html
+++ b/employee_payment/templates/employee_payment/employee_p_detail.html
@@ -1,9 +1,15 @@
 {% extends "client/layout.html" %}
 {% block body %}
-<ul>
-    <h3 class="profile-username text-center" align="center"> Employees Payment Details </h3>
+
+    <h3 class="profile-username text-center"> Employees Payment Details </h3>
+<hr/>
+    <div class="col-md-5">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
                 <ul class="list-group list-group-unbordered mb-3">
-                <div>
+
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -28,6 +34,21 @@
                     <b> Branch Name: </b> <a class="float-right">{{ object.branch_name }}</a>
                     </li>
 
+                </ul>
+
+              </div>
+
+            </div>
+
+    </div>
+
+    <div class="col-md-5">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3">
+
                     <li class="list-group-item">
                     <b> IFSC Code: </b> <a class="float-right">{{ object.ifsc_code }}</a>
                     </li>
@@ -47,7 +68,12 @@
                     <li class="list-group-item">
                     <b> Salary: </b> <a class="float-right">{{ object.salary }}</a>
                     </li>
-                </div>
+
                 </ul>
-</ul>
+
+              </div>
+
+            </div>
+    </div>
+
 {% endblock %}
