--- a/suppliers_master/templates/suppliers_master/suppliers_detail.html
+++ b/suppliers_master/templates/suppliers_master/suppliers_detail.html
@@ -1,9 +1,17 @@
 {% extends "client/layout.html" %}
 {% block body %}
-<ul>
-    <h3 class="profile-username text-center" align="center"> Suppliers Details </h3>
+
+    <h3 class="profile-username text-center"> Suppliers Details </h3>
+<hr/>
+    <div align="center">
+
+        <div class="col-md-6" align="left">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
                 <ul class="list-group list-group-unbordered mb-3">
-                <div>
+
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -36,7 +44,60 @@
                     <b> Transportation Expense: </b> <a class="float-right">{{ object.transportation_expense }}</a>
                     </li>
 
-                </div>
                 </ul>
-</ul>
+
+              </div>
+
+            </div>
+
+    </div>
+
+    </div>
+
 {% endblock %}
+
+
+
+
+{#{% extends "client/layout.html" %}#}
+{#{% block body %}#}
+{#<ul>#}
+{#    <h3 class="profile-username text-center" align="center"> Suppliers Details </h3>#}
+{#                <ul class="list-group list-group-unbordered mb-3">#}
+{#                <div>#}
+{#                    <li class="list-group-item">#}
+{#                    <b> Date: </b> <a class="float-right">{{ object.date }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                    <b> Receipt Number: </b> <a class="float-right">{{ object.receipt_no }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                    <b> Petrol In Literes: </b> <a class="float-right">{{ object.petrol_in_lit }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                    <b> Diesel In Literes: </b> <a class="float-right">{{ object.diesel_in_lit }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                    <b> Oil In Literes: </b> <a class="float-right">{{ object.oil_in_lit }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                    <b> Loss Of Petrol In Literes: </b> <a class="float-right">{{ object.loss_of_petrol_in_lit }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                    <b> Loss Of Diesel In Literes: </b> <a class="float-right">{{ object.loss_of_diesel_in_lit }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                    <b> Transportation Expense: </b> <a class="float-right">{{ object.transportation_expense }}</a>#}
+{#                    </li>#}
+{##}
+{#                </div>#}
+{#                </ul>#}
+{#</ul>#}
+{#{% endblock %}#}
