--- a/tank_master/templates/tank_master/tank_confirm_delete.html
+++ b/tank_master/templates/tank_master/tank_confirm_delete.html
@@ -32,6 +32,15 @@
                     <li class="list-group-item">
                     <b>Loss Of Diesel in Price: </b> <a class="float-right">{{ object.loss_diesel_price }}</a>
                     </li>
+                    <li class="list-group-item">
+                    <b>Opening Literes Of Oil: </b> <a class="float-right">{{ object.oil_lit_opening }}</a>
+                    </li>
+                    <li class="list-group-item">
+                    <b>Closing Literes Of Oil: </b> <a class="float-right">{{ object.oil_lit_closing }}</a>
+                    </li>
+
+
+
 
     </ul>
         <div align="center">
