--- a/calculation_master/templates/calculation_master/calculation_detail.html
+++ b/calculation_master/templates/calculation_master/calculation_detail.html
@@ -1,11 +1,19 @@
 {% extends "client/layout.html" %}
 {% block body %}
-<ul>
-    <h3 class="profile-username text-center" align="center"> Calculation Details </h3>
-                <ul class="list-group list-group-unbordered mb-3">
-                    <div>
 
-                        <li class="list-group-item">
+    <h3 class="profile-username text-center"> Tank Details </h3>
+<hr/>
+
+    <div align="center">
+
+        <div class="col-md-6" align="left">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
+                <ul class="list-group list-group-unbordered mb-3" >
+
+                    <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
 
@@ -33,9 +41,59 @@
                     <b> Name Of Driver: </b> <a class="float-right">{{ object.loss_in_diesel }}</a>
                     </li>
 
-
-                    </div>
-
                 </ul>
-</ul>
+
+              </div>
+
+            </div>
+
+    </div>
+
+    </div>
+
 {% endblock %}
+
+
+
+
+{#{% extends "client/layout.html" %}#}
+{#{% block body %}#}
+{#<ul>#}
+{#    <h3 class="profile-username text-center" align="center"> Calculation Details </h3>#}
+{#                <ul class="list-group list-group-unbordered mb-3">#}
+{#                    <div>#}
+{##}
+{#                        <li class="list-group-item">#}
+{#                    <b> Date: </b> <a class="float-right">{{ object.date }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                    <b> Company Name: </b> <a class="float-right">{{ object.tank_opening }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                    <b> Type Of Vehicle: </b> <a class="float-right">{{ object.tank_closing }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                    <b> Vehicle Number: </b> <a class="float-right">{{ object.total_lit_petrol }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                    <b> Type Of Fuel: </b> <a class="float-right">{{ object.total_lit_diesel }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                    <b> Name Of Driver: </b> <a class="float-right">{{ object.loss_in_petrol }}</a>#}
+{#                    </li>#}
+{##}
+{#                    <li class="list-group-item">#}
+{#                    <b> Name Of Driver: </b> <a class="float-right">{{ object.loss_in_diesel }}</a>#}
+{#                    </li>#}
+{##}
+{##}
+{#                    </div>#}
+{##}
+{#                </ul>#}
+{#</ul>#}
+{#{% endblock %}#}
