--- a/creditors_transaction/templates/creditors_transaction/creditor_transaction_detail.html
+++ b/creditors_transaction/templates/creditors_transaction/creditor_transaction_detail.html
@@ -1,9 +1,17 @@
 {% extends "client/layout.html" %}
 {% block body %}
-<ul>
-    <h3 class="profile-username text-center" align="center"> Creditors Transaction Details </h3>
+
+    <h3 class="profile-username text-center"> Creditors Transaction Details </h3>
+<hr/>
+    <div align="center">
+
+        <div class="col-md-6" align="left">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
                 <ul class="list-group list-group-unbordered mb-3">
-                <div>
+
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -11,6 +19,7 @@
                     <li class="list-group-item">
                     <b> Company Name: </b> <a class="float-right">{{ object.vehicle_master.creditors_master.company_name }}</a>
                     </li>
+
                     <li class="list-group-item">
                     <b> Company Name: </b> <a class="float-right">{{ object.vehicle_master.vehicle_no }}</a>
                     </li>
@@ -24,14 +33,16 @@
                         <li class="list-group-item">
                             <b> Total Litere petrol: </b> <a class="float-right">{{ object.petrol_in_lit }}</a>
                         </li>
+
                         <li class="list-group-item">
                             <b> Price Of Petrol: </b> <a class="float-right">{{ object.petrol_price }}</a>
                         </li>
+
                     {% else %}
+
                             <li class="list-group-item">
                             <b> Total Litere Diesel: </b> <a class="float-right">{{ object.diesel_in_lit }}</a>
                             </li>
-
 
                             <li class="list-group-item">
                             <b> Price Of Diesel: </b> <a class="float-right">{{ object.diesel_price }}</a>
@@ -39,26 +50,18 @@
 
                     {% endif %}
 
-
-
                     <li class="list-group-item">
                     <b> Remark: </b> <a class="float-right">{{ object.remark }}</a>
                     </li>
-                </div>
+
                 </ul>
 
-                <!-- this row will not appear when printing -->
-              <div class="row no-print">
-                <div class="col-6">
-                  <a href="invoice-print.html" rel="noopener" target="_blank" class="btn btn-default"><i class="fas fa-print"></i> Print</a>
-                  <button type="button" class="btn btn-success float-right"><i class="far fa-credit-card"></i> Submit
-                    Payment
-                  </button>
-                  <button type="button" class="btn btn-primary float-right" style="margin-right: 5px;">
-                    <i class="fas fa-download"></i> Generate PDF
-                  </button>
-                </div>
               </div>
 
-</ul>
+            </div>
+
+    </div>
+
+    </div>
+
 {% endblock %}
