--- a/vehicle_master/templates/vehicle_master/vehicle_detail.html
+++ b/vehicle_master/templates/vehicle_master/vehicle_detail.html
@@ -1,9 +1,17 @@
 {% extends "client/layout.html" %}
 {% block body %}
-<ul>
-    <h3 class="profile-username text-center" align="center"> Creditors Vehicle Details </h3>
+
+    <h3 class="profile-username text-center"> Creditors Vehicle Details </h3>
+<hr/>
+    <div align="center">
+
+        <div class="col-md-6" align="left">
+
+            <div class="card card-primary card-outline" class="col-md-4">
+              <div class="card-body box-profile">
+
                 <ul class="list-group list-group-unbordered mb-3">
-                <div>
+
                     <li class="list-group-item">
                     <b> Date: </b> <a class="float-right">{{ object.date }}</a>
                     </li>
@@ -32,7 +40,14 @@
                     <b> Remark: </b> <a class="float-right">{{ object.remark }}</a>
                     </li>
 
-                </div>
                 </ul>
-</ul>
+
+              </div>
+
+            </div>
+
+    </div>
+
+    </div>
+
 {% endblock %}
